VPS et arrested phase separation

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -75,9 +75,13 @@ The stability of caseins dispersion strongly depend on the pH of the solution. S
 
 %On the Stability of Casein Micelles, Pieter Walstra J. of dairy science 1990
 
-To form a space spanning gel, flocculation needs to be prevented. We use glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, Figure~\ref{fig:acidification}a. This GDL controlled acidification enables the formation of a bulk gel phase below pH=5.3 with $x_\text{free}\approx 0$. As shown on Figure~\ref{fig:acidification}a and b, when adding enough GDL the pH lowers beyond the isoeletric point and $x_\text{free}$ rises again. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time, Figure~\ref{fig:acidification}c. The mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (500 Pa) at the isoelectric point and finally the elastic modulus decreases down to 100 Pa. This finite value indicates that the sample is still a gel.
+To form a space spanning gel, flocculation needs to be prevented. We use glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, Figure~\ref{fig:acidification}a. This GDL controlled acidification enables the formation of a bulk gel phase below pH=5.3 with $x_\text{free}\approx 0$. This process is kinetically driven by diffusion limited cluster aggregation~\cite{Bremer1989}. As shown on Figure~\ref{fig:acidification}a and b, when adding enough GDL the pH lowers beyond the isoelectric point shifting the balance between attraction and charge repulsion at the casein level, so that casein partially dissociate from the fractal network. This results in the coexistence between a dilute phase $x_\text{free}\approx 5-20\%$ and a dense glassy network, a scenario reminiscent of arrested phase separation~\cite{Cardinaux2007,lu2008gelation}.
 
-To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consists in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size~\cite{VanDijk1986}. Permeability $\alpha$ is of the order of \SI{67000}{\square\nano\metre}, see Supplementary Figure~\ref{fig:permeability}. The fractal model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d and Supplementary Figure~\ref{fig:nonmonotonic}, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network~\cite{Lucey1998}. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As caseins regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
+Here the attraction between caseins is weakened enough so that we observe the coexistence between a dilute phase $x_\text{free}\approx 5-20\%$ and a dense glassy network, a scenario reminiscent of arrested phase separation. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time, Figure~\ref{fig:acidification}c. The mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (\SI{500}{\pascal}) at the isoelectric point and finally the elastic modulus decreases down to \SI{100}{\pascal}. This finite value indicates that the sample is still a gel.
+
+To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consists in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size~\cite{VanDijk1986}. Permeability $\alpha$ is of the order of \SI{67000}{\square\nano\metre}, see Supplementary Figure~\ref{fig:permeability}. The fractal model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d and Supplementary Figure~\ref{fig:nonmonotonic}, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network~\cite{Lucey1998} like in viscoelastic phase separation~\cite{Tanaka2000h}. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As caseins regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
+
+This process is reminiscent of arrested phase separation where a dilute phase coexist with a dense glassy network.
 
 %XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we make the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer~\cite{VanDijk1986}. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rises in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
 
@@ -162,9 +166,9 @@ Darcy and Poiseuille models yield wavelengths that are of the same order in most
 
 Our results are displayed in Figure~\ref{fig:DarcyPoiseuille}. Although they provide the correct order of magnitude for $\lambda$, neither model alone is able to quantitatively reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to miss out on the failure of the Poiseuille model at small wavelengths by adding an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b). Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for the whole $H/H^*$ range.
 
-\section*{conclusion}
+\section*{Conclusion}
 
-In conclusion we have taken advantage of the properties of the protein casein and carefully engineered the route to form permeable biogels that, in slit geometry, produce original cascade of wrinkling patterns when casein adhesion to the slit walls is turned off. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013}.
+In conclusion we have taken advantage of the properties of the protein casein. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of the transition from a fractal gel to an arrested phase separation. This carefully engineered route to form permeable biogels is the key, with controlled adhesion of the gels to the boundaries, to produce original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013}.
 
 
 %role of gravity
@@ -176,7 +180,7 @@ Sodium caseinate (Firmenich) is dissolved in deionised water by stirring for \SI
 Home made optical cells are composed of a slide (RS France) and a cover slip (Menzel-Gl\"aser) spaced by parafilm (Parafilm). The optical cell is briefly heated on a hot plate so that the parafilm welds to the slide and the cover slip. Gently applying a pressure on the cover slip while being heated allows us to tune the thickness of the cell from \SIrange{50}{150}{\micro\metre}. The slit is filled with the casein dispersion, immediately sealed using ultraviolet-cured glue (Norland Optical) and placed under the microscope before gelation could take place. To prevent adsorption of caseins to surfaces, microscope slides and cover slips used to make microscopy cells are cleaned and subsequently coated with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) from which a polyacrylamide brush is polymerised from methacrylate groups (Euromedex).
 
 3D data are collected on a Zeiss LSM510 confocal microscope, using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling (see Supplementary Material) or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) are used to measure the wavelength of the primary pattern (Supplementary Figures~\ref{fig:generations} and \ref{fig:patterns}). Secondary pattern wavelength is set to half of the primary wavelength, according to Supplementary Figure~\ref{fig:generations}.
-Data shown in Figure~\ref{fig:acidification}a and c are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar).
+Data shown in Figure~\ref{fig:acidification}a and c are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar). For every gel composition we monitor the gelation by small amplitude oscillations (0.1\%, \SI{1}{\hertz}) and estimate the flexural modulus $B$ from the maximum value of the shear modulus $G^\prime$ as $B=2G^\prime/(1-\nu)$ taking $\nu=0.3$ for the Poisson ratio, typical value for a spongy network~\cite{Greaves2011}.
 Permeability is measured using a protocol found in \cite{VanDijk1986} (see Supplementary Method and Supplementary Figure~\ref{fig:permeability}). The amount of free casein protein present in the gel during the GDL acidification process is measured by titration and UV-spectrometry (Ocean Optics) according to the protocol found in~\cite{Roefs1986} and detailed in Supplementary Method.
 
 \bibliographystyle{naturemag3}
