--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -730,6 +730,20 @@
   Url                      = {http://www.sciencedirect.com/science/article/pii/S0022509608002160}
 }
 
+@Article{Fleury2015,
+  Title                    = {{Buckling along boundaries of elastic contrast as a mechanism for early vertebrate morphogenesis}},
+  Author                   = {Fleury, Vincent and Chevalier, Nicolas R. and Furfaro, Fabien and Duband, Jean-Loup},
+  Journal                  = {Eur. Phys. J. E},
+  Year                     = {2015},
+  Volume                   = {38},
+
+  Doi                      = {10.1140/epje/i2015-15006-7},
+  ISSN                     = {1292-8941},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.02.16},
+  Url                      = {http://link.springer.com/10.1140/epje/i2015-15006-7}
+}
+
 @Article{Genzer2006,
   Title                    = {{Soft matter with hard skin: From skin wrinkles to templating and material characterization}},
   Author                   = {Genzer, Jan and Groenewold, Jan},
