--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -47,7 +47,7 @@ There are many ways and reasons for a film to wrinkle. An elastic film buckles d
 %compressive stress: kim_2011_Hierarchical folding of elastic membranes under
 
 
-Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situation. Indeed, stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}.
+Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situation. Indeed, stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength~\cite{Fleury2015}. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}.
 
 Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002} -- this is a well-known effect used in yoghurt making -- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Figure~\ref{fig:dynamics} and in Supplementary Videos 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Figure~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
 
@@ -168,7 +168,7 @@ Our results are displayed in Figure~\ref{fig:DarcyPoiseuille}. Although they pro
 
 \section*{Conclusion}
 
-In conclusion we have taken advantage of the properties of the protein casein. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of the transition from a fractal gel to an arrested phase separation. This carefully engineered route to form permeable biogels is the key, with controlled adhesion of the gels to the boundaries, to produce original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013}.
+In conclusion we have taken advantage of the properties of the protein casein. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of the transition from a fractal gel to an arrested phase separation. This carefully engineered route to form permeable biogels is the key, with controlled adhesion of the gels to the boundaries, to produce original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}.
 
 
 %role of gravity
