--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -69,7 +69,7 @@ The main goal of the present study is thus to identify the selection mechanism o
 \end{figure}
 
 
-To form wrinkled patterns such as the one observed in figure~\ref{fig:dynamics}, ones needs to take advantage of the pH sensitivity of caseins to control the route to gelation, to fine tune the gel properties and the boundary conditions.
+To form wrinkled patterns such as the one observed in figure~\ref{fig:dynamics}, ones needs to take advantage of the pH sensitivity of caseins, to control the route to gelation, to fine tune the gel properties and the boundary conditions.
 
 The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary Video 3 shows the titration of a caseins dispersion at 1\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then then flocculate between pH=5.5 to 4 and finally at pH=3 the solution become clear again. However as one increases the caseins concentration up to 4\%w, at low pH the caseins redispersion is not total, Supplementary Video 4. The state diagram of caseins as a function of the pH is related to charge stabilisation. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), casein molecules loose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. Beyond the isoelectric point caseins acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH (see Supplementary Methods). Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH of the solution to the isolectric point the free casein fraction drops to almost 0, almost all the casein molecule are aggregated. Further decrease of the pH of the solution lead to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
 
@@ -85,7 +85,7 @@ This process is reminiscent of arrested phase separation where a dilute phase co
 
 %XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we make the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer~\cite{VanDijk1986}. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rises in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
 
-Boundary conditions is the final parameter that is essential to form wrinkled patterns. To turn off the adsorption of the caseins on a surface, we coat it with polymer brushes (see Methods), effectively creating non adhesive boundary conditions for the gel. The evolution of $\xi$ when sticky boundaries are on reflects the inner constrains of the gel: $\xi$ increases, the stands of the network become thinner and the gel wants to retract; then $\xi$ decreases, the stands of the network swell and the gel wants to expend. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant but the volume occupied by the gel varies, as will be reported below.
+Boundary conditions is the final parameter that is essential to form wrinkled patterns. To turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes (see Methods), effectively creating non adhesive boundary conditions for the gel. The evolution of $\xi$ when sticky boundaries are on reflects the inner constrains of the gel: $\xi$ increases, the stands of the network become thinner and the gel wants to retract; then $\xi$ decreases, the stands of the network swell and the gel wants to expend. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant but the volume occupied by the gel varies, as will be reported below.
 
 
 %We coat the glass slides with acrylamide brushes to prevent the adhesion of the casein. In fig.2c, when the top slide of the optical cell is coated with acrylamide brushes, we then observe that the casein network detaches from the top slide. $\xi$ does not peak at the isoelectric point but remains constant
@@ -115,7 +115,7 @@ Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and
 
 %Longitudinally constrained swelling of the gel film is the origin and driving force of the buckling instability. The gel area becomes in excess compared to the available area, thus the gel must fold. However, this does not explains how a wavelength is selected.
 
-The determination of the characteristic length $\lambda$ of a wrinkling pattern is an old problem. Large deformations of thin sheets is governed by F\"{o}ppl-von K\'arm\'an equations~\cite{landau1986}, essentially impossible to solve in analytical form. However using scaling and asymptotic arguments one can obtain the dominant wavelength of the wrinkling pattern and isolate the physically meaningful ingredients~\cite{Cerda2003}. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. $\lambda$ is then set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$. For small deflections of  amplitude $A$, $\lambda$ scales as~\cite{Vella2009,Kolinski2009}: 
+The determination of the characteristic length $\lambda$ of a wrinkling pattern is an old problem. Large deformations of thin sheets is governed by F\"{o}ppl-von K\'arm\'an equations~\cite{landau1986}, which are essentially impossible to solve in analytical form. However using scaling and asymptotic arguments one can obtain the dominant wavelength of the wrinkling pattern and isolate the physically meaningful ingredients~\cite{Cerda2003}. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. $\lambda$ is then set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$. For small deflections of  amplitude $A$, $\lambda$ scales as~\cite{Vella2009,Kolinski2009}: 
 %
 \begin{equation}
 \lambda \sim \left( A h^3 \frac{B}{\sigma_{\perp}} \right)^{1/4}.
@@ -219,7 +219,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \subsection*{Fraction of free casein as a function of the pH}
 
-The fraction of free casein proteins of a \SI{100}{\milli\litre}, 4\%w sodium caseinate dispersion is obtained either by titration by HCl 1 molar or during the action of 4\%w GDL. In both cases, \SI{0.4}{\milli\litre} of the \SI{100}{\milli\litre} dispersion is sampled regularly as a function of the pH, and centrifuged in eppendorf tubes at 14500 rpm for \SI{3}{\minute}. The supernatant is diluted and analysed with a UV absorption spectrometer (Ocean Optics). According to~\cite{Roefs1986}, we deduced the fraction of free casein proteins from the adsorption spectrum:
+The fraction of free casein proteins of a \SI{100}{\milli\litre}, 4\%w sodium caseinate dispersion is obtained either by titration by HCl 1 molar or during the action of 4\%w GDL. In both cases, \SI{0.4}{\milli\litre} of the \SI{100}{\milli\litre} dispersion is sampled regularly as a function of the pH, and centrifuged (centrifuge 5424, Eppendorf) in Eppendorf tubes at 14500 rpm for \SI{3}{\minute}. The supernatant is diluted and analysed with a UV absorption spectrometer (USB4000, Ocean Optics). According to~\cite{Roefs1986}, we deduced the fraction of free casein proteins from the adsorption spectrum:
 %
 \begin{align}
 x_{free} &= \frac{A(\text{pH})}{A(\text{pH}=7)},\\
