typos et raccourcit la description des images

--- a/fig_plis/cover_letter.tex
+++ b/fig_plis/cover_letter.tex
@@ -27,27 +27,27 @@ Please find enclosed our manuscript, entitled \emph{Hierarchical wrinkling in pe
 
 
 
-Supplementary video 1 arouse one's curiosity. It shows microscopy images of the biogel as a function of time in and optical cell where the adhesion of the protein to the cell wall is prohibited. How can a simple protein gel form spontaneously such complicated nested patterns?
+Supplementary Video 1 arouses one's curiosity. It shows microscopy images of a thin optical cell containing a protein gel whose adhesion to the cell wall is prohibited. No external stimulus is applied. How can a simple biogel form spontaneously such complicated nested patterns?
 
-Supplementary video 2, which shows a 3D construction of the gel based on confocal imaging, hints towards the answer. The gel shrinks then swells and wrinkles due to the excess area created during swelling. This is however not the end of the story as boundary conditions frustrate the development of the wrinkles and induce buckling within the buckling . This hierarchical pattern is a beautiful illustration of the well known Droste effect named after the cacao brand whoes trademark image displays a nurse carrying a serving tray with a cup of hot chocolate and a box with the same image. In France it is known as the    ``Vache qui rit'' effect and of course one thinks about Russian dolls.
+Supplementary Video 2, which shows a 3D construction of the gel based on confocal imaging, hints towards the answer. The gel shrinks then swells and wrinkles due to the excess area created during swelling. This is however not the end of the story as boundary conditions frustrate the development of the wrinkles and induce buckling within the buckling . This hierarchical pattern is a beautiful illustration of the well known Droste effect, known in France as ``Vache qui rit'' effect, where an image contains a smaller version of itself.
 
 
 \begin{tabu}{X[c]X[c]}
-\includegraphics[height=6\baselineskip]{../Droste.jpg}&
-\includegraphics[height=6\baselineskip]{../vachequirit.jpg}
+\includegraphics[height=8\baselineskip]{../Droste.jpg}&
+\includegraphics[height=8\baselineskip]{../vachequirit.jpg}
 \end{tabu}
 
 
 
 It is universally recognized that confined thin surfaces may wrinkle due the growth of an excess of material. For example on the biology side different rates of growth between the gut tube and its dorsal anchoring is responsible for the vilification of guts. Localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern. Such patterns can also be triggered by physical cues as temperature dilation, swelling or the removal of pre-strain.
 
-Yet, benchmark experiments such as the one presented in Supplementary Video 1 and 2, that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line. Indeed, stability analysis of a film lying on a thin viscous substrate was studied only recently and remains theoretical because, on a free interface, gravity dominates over viscous substrate.
+Yet, benchmark experiments such as the one presented in Supplementary Videos 1 and 2, that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line. Indeed, stability analysis of a film lying on a thin viscous substrate was studied only recently and remains theoretical because, on a free interface, gravity dominates over viscous substrate as the wavelength selection mechanism.
 
 From a fundamental perspective, our work unifies concepts from diverse soft matter systems.
 \begin{enumerate}
 \item From food science we have hijacked the process of yoghurt making to form gels. Usually, when you acidify milk the caseins flocculate. To form a uniform yoghurt gel one needs to lower homogeneously the pH, as bacteria do. Here we use the acidulent GDL for finer control.
 
-\item  Next, we exploit the concept of stability in colloidal suspensions. As the GDL acidifies the medium, caseins loose their net charge and aggregate. Upon further acidification the casein regain charges and partially desorb form the gel. This makes the gel successively shrink and swell.
+\item  Next, we exploit the concept of stability in colloidal suspensions. As the GDL acidifies the medium, caseins loose their net charge and aggregate. Upon further acidification the caseins regain charges and partially desorb from the gel. This makes the gel successively shrink and swell.
 
 \item This process also can be well understood by invoking two different theories of gelation. Diffusion limited cluster aggregation is responsible for the formation of the fractal network of the gel ; whereas arrested phase separation well describes the coexistence between a dilute phase and a dense glassy network.
 
@@ -61,7 +61,7 @@ From a practical perspective, such a model experiment, because it relies on pH i
 The impact of our work extends beyond soft-matter physics. For instance, it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting or in optical devices such as diffraction gratings or Fresnel lenses, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues. Indeed during the morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.
 
 
-For all these reasons we believe that our manuscript is suitable for a publication in an interdisciplinary journal such as XXX. With this manuscript we are including XXX supplementary movies, which have been mailed to your editorial office. As possible reviewers we suggest: L. Mahadevan (Harvard, USA), N. Menon (Amherst, USA), José Bico (ESPCI, France), Enrique Cerda (Univ. Santiago-Chile, Chile), Mokhtar-Adda-Bedia (ENS Paris, France), Shu Yang (U.Penn, USA), Pascal Damman (Univ. Mons, Belgium), Tian Yang (Univ. Michigan, USA), Dominic Vella (Oxford, UK) XXX.
+For all these reasons we believe that our manuscript is suitable for a publication in an interdisciplinary journal such as Nature Materials. With this manuscript we are including 8 Supplementary Videos, which have been mailed to your editorial office. As possible reviewers we suggest: L. Mahadevan (Harvard, USA), N. Menon (Amherst, USA), José Bico (ESPCI, France), Enrique Cerda (Univ. Santiago-Chile, Chile), Mokhtar-Adda-Bedia (ENS Paris, France), Shu Yang (U.Penn, USA), Pascal Damman (Univ. Mons, Belgium), Tian Yang (Univ. Michigan, USA), Dominic Vella (Oxford, UK) XXX.
 
  
 
